--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 	<head>
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
+		<style type="text/css">
+			body { margin: 0; padding: 0; overflow: hidden; }
+			canvas { background-color: blue; }
+		</style>
 	</head>
 	<body id="thebod">
 	</body>
