--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
 		<meta content="utf-8" http-equiv="encoding">
 		<style type="text/css">
 			body { margin: 0; padding: 0; overflow: hidden; }
-			canvas { background-color: blue; }
+			canvas { 
+				position: absolute;
+				top: 0;
+				left: 0;
+			}
+			canvas:nth-of-type(1) {
+				background-color: rgba(0, 0, 255, 0.2);
+			}
+			canvas:nth-of-type(2) {
+				background-color: rgba(255, 0, 0, 0.2);
+			}
 		</style>
 	</head>
 	<body id="thebod">
